maze.lessons.maze.randommouse.RandomMouseMaze.scala.error
RandomMouseMaze:19: error: expected class or object definition
	def random3():Int = {
        ^RandomMouseMaze:26: error: Unmatched closing brace '}' ignored here
}
^